--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "files.associations": {
     "*.css": "tailwindcss",
-    "stdlib.h": "c",
-    "game.h": "c"
+    "stdio.h": "c",
+    "game.h": "c",
+    "player.h": "c",
+    "stdlib.h": "c"
   }
 }
